--- a/tugas2.html
+++ b/tugas2.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<title>tugas 1 sistem linear</title>
+<title>tugas2 sistem linear</title>
 </head>
 <body bgcolor="#C0C0C0">
-<center><h1>Tag - tag Pada HTML beserta Fungsinya</h1></center>
+<center><h1>Tag - tag Pada penulisan HTML beserta Fungsinya</h1></center>
 oleh :
 <br />Nama : Ainur Rofiq 
 <br />NIM : 215430028
